[tool.poetry]
name = "beethoven"
version = "0.1.0"
description = "Python music making library."
authors = ["Laurent Arthur <laurent.arthur75@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/ludwig778/beethoven"
repository = "https://github.com/ludwig778/beethoven"
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
mido = "^1.2.9"
colored = "^1.4.2"
python-rtmidi = "^1.4.9"
pymongo = "^3.11.4"
dnspython = "^2.1.0"
pydantic = "^1.9.0"
PySide6 = "^6.2.4"
prompt-toolkit = "3.0.18"
hartware-lib = "0.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
isort = "^5.8.0"
pytest-env = "^0.6.2"
mypy = "^0.910"
black = "^22.3.0"
pytest-mock = "^3.7.0"
piprot = "^0.9.11"

[tool.poetry.scripts]
beethoven = "beethoven:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
