[tool.poetry]
name = "beethoven"
version = "0.1.0"
description = "Python music making library."
authors = ["Laurent Arthur <laurent.arthur75@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/ludwig778/beethoven"
repository = "https://github.com/ludwig778/beethoven"
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
dnspython = "2.2.1"
hartware-lib = "0.3.1"
mido = "1.2.10"
prompt-toolkit = "3.0.18"
pydantic = "1.10.2"
pymongo = "3.12.3"
pyparsing = "3.0.9"
pyside6 = "^6.4.2"
python-rtmidi = "1.4.9"
requests = "2.28.1"
requests-futures = "1.0.0"
requests-mock = "1.10.0"
types-requests = "2.28.11.2"
types-urllib3 = "1.26.25.1"
typing-extensions = "4.4.0"
urllib3 = "1.26.12"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = "6.5.0"
flake8 = "^3.9.0"
isort = "^5.8.0"
mypy = "^0.991"
piprot = "^0.9.11"
pytest = "6.2.5"
pytest-cov = "2.12.1"
pytest-env = "0.6.2"
pytest-mock = "3.10.0"

[tool.poetry.scripts]
beethoven = "beethoven:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
