[tool.poetry]
name = "beethoven"
version = "0.1.0"
description = "Python music making library."
authors = ["Laurent Arthur <laurent.arthur75@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/ludwig778/beethoven"
repository = "https://github.com/ludwig778/beethoven"
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
colour = "^0.1.5"
mido = "1.2.10"
prompt-toolkit = "^3.0.37"
pyparsing = "3.0.9"
pyside6 = "6.4.2"
python-rtmidi = "1.4.9"
hartware-lib = "^0.5.37"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = "6.5.0"
flake8 = "^3.9.0"
icnsutil = "^1.0.1"
ipython = "^8.10.0"
isort = "^5.8.0"
mypy = "^0.991"
piprot = "^0.9.11"
pyinstaller = "^5.8.0"
pytest = "6.2.5"
pytest-cov = "2.12.1"
pytest-env = "0.6.2"
pytest-mock = "3.10.0"

[tool.poetry.scripts]
beethoven = "beethoven.ui.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
